fatsecret API connection beta

--- a/Templates/Food/product_list.html
+++ b/Templates/Food/product_list.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}	
-	
+	<h1 id="title">Calories tables </h1>
 	<table class="table table-striped table-dark">
 
 		<thead>
