--- a/Templates/home.html
+++ b/Templates/home.html
@@ -3,9 +3,7 @@
 
 {% block content %}
 
-	
-	<h1> Hello World</h1>
-	<p>Django Fit App home page! </p>
+	<h1 id="title">Calories tables </h1>
 
 	<p>Welcome to my first web-app written in Django.</p>
 
