--- a/Templates/navigation_bar.html
+++ b/Templates/navigation_bar.html
@@ -26,7 +26,7 @@
 						{% if request.user.is_authenticated %}						
   						<a class="dropdown-item" href="{% url 'food:prod_table' %}">Product table</a>	  											
  						{% endif %}
- 						<a class="dropdown-item" href="#">Add new ingredient</a>
+ 						<a class="dropdown-item" href="{% url 'food:ingredient_choice' %}">Add new ingredient</a>
  						{% if request.user.is_authenticated %}	
  						<a class="dropdown-item" href="#">Create new meal</a>
  						{% endif %}
