--- a/Templates/Account/login.html
+++ b/Templates/Account/login.html
@@ -3,22 +3,29 @@
 
 
 {% block content %}   
-    
-    <div class="contect-section">
-        <form method="POST">
-            {% csrf_token %}        
-            <fieldset class="form-group">
-                <legend class=border-bottom mb-4>Log in</legend>
-                {{ login_form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-             <a class ="ml-2 btn btn-outline-light" href="{% url 'profile:registration' %}">Need an account?</a>
-             <a class ="ml-2 btn btn-outline-light" href="#">Forgot password??</a>
-        </div>
-    </div>
+	
+	<div class="contect-section">
+		<form method="POST">
+			{% csrf_token %}        
+			<fieldset class="form-group">
+				<legend class=border-bottom mb-4>Log in</legend>
+				{{ login_form|crispy }}
+			</fieldset> 
+			<div class="form-group">
+				<button class="btn btn-outline-info" type="submit">Login</button>
+			</div>
+		</form>
+
+		{% for field in login_form %}
+		 	{% for error in field.errors %}
+				<p style="color:red;">{{error}}</p>
+			{% endfor %}
+		{% endfor %}
+
+		<div class="border-top pt-3">
+			<a class ="ml-2 btn btn-outline-light" href="{% url 'profile:registration' %}">Need an account?</a>
+			<a class ="ml-2 btn btn-outline-light" href="#">Forgot password??</a>
+		</div>
+	</div>
 
 {% endblock %}
