--- a/Templates/navigation_bar.html
+++ b/Templates/navigation_bar.html
@@ -74,7 +74,7 @@
 			<div class="navbar-nav">
 				{% if request.user.is_authenticated %}
 					<a class="nav-item nav-link" href="{% url 'profile:log_out' %}">Logout</a>
-					<a class="nav-item nav-link">Hello, {{request.user.username}} </a>
+					<a class="nav-item nav-link" href="{% url 'profile:profile_details' %}" >Hello, {{request.user.username}} </a>
 				{% else %}
 					<a class="nav-item nav-link" href="{% url 'profile:log_in' %}">Login</a>
 					<a class="nav-item nav-link" href="{% url 'profile:registration' %}">Register</a>
