--- a/Templates/main.html
+++ b/Templates/main.html
@@ -14,17 +14,20 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </head>
+
+	<body>
+		{% include 'navigation_bar.html' %}
+
+		
+		<div class="col-sm-10 container-fluid">
+			{% block content %}		
+				To Be Replaced
+			{% endblock %}
+		</div>
+		
+
+		{% include 'footer.html' %}
+	</body>
+
 	
-	{% include 'navigation_bar.html'%}
-
-
-
-	
-	<div class="col-sm-10 container-fluid">
-	{% block content %}		
-		To Be Replaced
-	{% endblock %}
-	</div>
-
-
 </html>
