--- a/files/style.css
+++ b/files/style.css
@@ -6,6 +6,21 @@ body{
 	text-align: center;
 	
 }
+
+footer {
+
+	background: #414445;/*rgba(25, 27, 27, 0.8)*/
+    position: fixed; 
+    padding: 10px 10px 0px 10px; 
+    bottom: 0; 
+    width: 100%; 
+    /*	box-shadow: 0 50vh 0 50vh #414445;
+	padding: 30px;
+	margin-top: 10px;
+	background: #292b2c;*/
+}
+
+
 #navbargroup{
 	padding-bottom: 50px;
 }
@@ -51,4 +66,8 @@ body{
 
 .account-heading {
 	font-size: 2.5rem;
+}
+
+.copy{
+	padding-bottom: 10;
 }
