Creating Product view + addcing recipe positions

--- a/Templates/Account/login.html
+++ b/Templates/Account/login.html
@@ -24,7 +24,7 @@
 
 		<div class="border-top pt-3">
 			<a class ="ml-2 btn btn-outline-light" href="{% url 'profile:registration' %}">Need an account?</a>
-			<a class ="ml-2 btn btn-outline-light" href="#">Forgot password??</a>
+			<a class ="ml-2 btn btn-outline-light" href="{% url 'password_reset' %}">Forgot password??</a>
 		</div>
 	</div>
 
