--- a/Templates/Account/password_reset_done.html
+++ b/Templates/Account/password_reset_done.html
@@ -4,8 +4,9 @@
 
 {% block content %}   
 	<div class="align-bottom contect-section ">
-		<div class="alert alert-dark">
-			An email with all necessary instructions has been sent to your email adress.
+		<div class="alert alert-dark">			
+			<p>A confirmation of the message has been sent to the address provided.</p>
+			<p>Please follow the instructions in the email to recover your password.</p>
 		</div>
 	</div>
 
