--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -4,7 +4,7 @@
 
 	<div>
 		<p class="text-light copy"> 
-			Copyrights © 2020 ALL RIGHTS RESERVED
+			Copyrights © 2020 RATEL INC. | ALL RIGHTS RESERVED
 		</p>
 	</div>
 
