--- a/Templates/main.html
+++ b/Templates/main.html
@@ -19,7 +19,7 @@
 		{% include 'navigation_bar.html' %}
 
 		
-		<div class="col-sm-10 container-fluid">
+		<div class="col-sm-10 container-fluid main">
 			{% block content %}		
 				To Be Replaced
 			{% endblock %}
