--- a/Templates/Food/create_meal.html
+++ b/Templates/Food/create_meal.html
@@ -8,14 +8,13 @@
 		<form method="POST">
 			{% csrf_token %}        
 			<fieldset class="form-group">
-				<p>Please enter your email address. We will send you a link to reset your password.</p>
-				<legend class=border-bottom mb-4>Reset Password</legend>
+				<legend class=border-bottom mb-4>Create new Meal</legend>
 				{{ form|crispy }}
 			</fieldset> 
 			<div class="form-group">
-				<button class="btn btn-outline-info" type="submit">Reset my password</button>
+				<button class="btn btn-outline-info" type="submit">Save</button>
 			</div>
 		</form>
-	</div>
+
 
 {% endblock %}
