--- a/Templates/navigation_bar.html
+++ b/Templates/navigation_bar.html
@@ -15,58 +15,31 @@
 		<div class="collapse navbar-collapse" id="mainmenu">
 			<ul class="navbar-nav mr-auto px-md-5" >
 				<li class="nav-item px-5" size="16">
-					<a  class="nav-link"  href="#">Home</a>					
+					<a  class="nav-link"  href="http://127.0.0.1:8000/">Home</a>					
 				</li>
 
 				<li class="nav-item dropdown px-md-5">
 					<a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" 
 					id="submenu" aria-haspopup="true" href="#">Food</a>	
 
-					<div class="dropdown-menu" aria-labelledby="submenu">
-						{% if request.user.is_authenticated %}						
-							<a class="dropdown-item" href="{% url 'food:prod_table' %}">Product table</a>
-						{% endif %}
-						<a class="dropdown-item" href="#">Add new ingredient</a>
+					<div class="dropdown-menu" aria-labelledby="submenu">					
+						<a class="dropdown-item" href="{% url 'food:prod_table' %}">Product table</a>
+						<a class="dropdown-item" href="{%  url 'food:ingredinet_create' %}">Add new ingredient</a>
 						{% if request.user.is_authenticated %}	
-							<a class="dropdown-item" href="#">Create new meal</a>
+							<a class="dropdown-item" href="{% url 'food:meal_create' %}">Create new meal</a>
 							<a class="dropdown-item" href="#">Import ingredient</a>
 						{% endif %}
 					</div>				
 				</li>
 
-				<li class="nav-item dropdown px-md-5">
-					<a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" 
-					id="submenu" aria-haspopup="true" href="#">Articles</a>	
-
-					<div class="dropdown-menu" aria-labelledby="submenu">
-						<a class="dropdown-item" href="#">All articles</a>
-						{% if request.user.is_authenticated %}	
-							<a class="dropdown-item" href="#">Add article</a>
-						{% endif %}
-					</div>									
-				</li>
 
 				<li class="nav-item px-md-5">
 					<a  class="nav-link " href="#">Contact</a>					
 				</li>
 
 				{% if request.user.is_authenticated %}
-
-					<li class="nav-item dropdown px-md-5">
-						<a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" 
-						id="submenu" aria-haspopup="true" href="#">Profile</a>	
-
-						<div class="dropdown-menu" aria-labelledby="submenu">
-							<a  class="dropdown-item" href="#">Edit Profile</a>	
-							<a  class="dropdown-item" href="#">Diet</a>						
-						</div>				
-					</li>
-
-				{% endif %}
-
-				{% if request.user.is_authenticated %}
 					<li class="nav-item px-md-5">
-						<a  class="nav-link" href="#">Profile</a>					
+						<a  class="nav-link" href="{% url 'profile:profile_details' %}">Profile</a>					
 					</li>
 				{% endif %}
 			</ul>
