--- a/Templates/Food/product_list.html
+++ b/Templates/Food/product_list.html
@@ -33,7 +33,7 @@
 					<td>{{item.total_carbohydrates}}</td>
 					<td>{{item.total_fat}}</td>
 					<td>{{item.total_weight}}</td>
-					<td>{{item.total_price}}</td>
+					<td>{{item.total_price}} $</td>
 					<td>									 
 						<button type="button" class="btn btn-secondary">
 							<a class="hyperlink-off" href="#">Add</a>
