--- a/Templates/Food/ingredient_table.html
+++ b/Templates/Food/ingredient_table.html
@@ -3,7 +3,7 @@
 {% block content %}	
 	<h1 id="title"> Ingredients </h1>
 
-	<form action="{% url 'food:search_results' %}" method="get">
+	<form action="#" method="get">
 		<input name="word" type="text" placeholder="Search">
 	</form>
 
