--- a/Templates/Food/ingredient_list.html
+++ b/Templates/Food/ingredient_list.html
@@ -1,61 +1,40 @@
 {% extends 'main.html' %}
 
 {% block content %}	
+	<h1 id="title">Calories tables </h1>
 
-	<h1 id="title"> Current positions in the recipe  </h1>
-
-	<table class="table table-striped table-dark">
-
-		<thead>
-			<tr>
-				<th scope="col">Name</th>
-				<th scope="col">Weight</th>
-			</tr>
-		</thead>
-
-		<tbody>	
-			{% for item in recipe %}
-				<tr>
-					<td>
-						{{ item.ingredient.name|capfirst }}	
-					</td>						
-					<td>									 
-						{{ item.weight }}											
-					</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-
-	</table>
-	<br><br>
-
-
-	<h1> Ingredients to add  </h1>
-	<br>
-	<form action="#" method="get">
+	<form action="{% url 'food:search_results' %}" method="get">
 		<input name="word" type="text" placeholder="Search">
-	</form>	
+	</form>
+
 	<br><br>
+	
 	<table class="table table-striped table-dark">
 
 		<thead>
 			<tr>
-				<th scope="col">Name</th>
-				<th scope="col">Add to recipe</th>
+				<th scope="col">Product name</th>
+				<th scope="col">Proteins</th>
+				<th scope="col">Carbohydrates</th>
+				<th scope="col">Fat</th>
+				<th scope="col">Quantity per portion</th>
+				<th scope="col">Price</th>
 			</tr>
 		</thead>
 
 		<tbody>	
-			{% for item in ingredients %}
+			{% for item in objects %}
 				<tr>
 					<td>
-						{{ item.name|capfirst }}	
+						<a class="hyperlink-off" href="{% url 'food:prod_detail' item.pk %}">
+							{{ item.name|capfirst }}
+						</a>
 					</td>						
-					<td>									 
-						<button type="button" class="btn btn-secondary">
-							<a class="hyperlink-off" href="{% url 'food:create_recipe' prod_pk item.pk %}">Add</a>
-						</button>													
-					</td>
+					<td>{{item.total_protein}}</td>
+					<td>{{item.total_carbohydrates}}</td>
+					<td>{{item.total_fat}}</td>
+					<td>{{item.total_weight}}</td>
+					<td>{{item.total_price}} $</td>
 				</tr>
 			{% endfor %}
 		</tbody>
