Ingredient views completed

--- a/Templates/Food/ingredient_add.html
+++ b/Templates/Food/ingredient_add.html
@@ -4,6 +4,10 @@
 
 {% block content %}   
 	
+	<p>
+		Remember, when creating new ingredient, it is automatically added to the table of products so that you can compose your diet plan also by adding simple, unprocessed types of food like oat meal, apple etc. .
+	</p>
+
 	<div class="contect-section">
 		<form method="POST">
 			{% csrf_token %}        
