Created Diet plan for profilies

--- a/Templates/navigation_bar.html
+++ b/Templates/navigation_bar.html
@@ -51,7 +51,7 @@
 
 				{% if request.user.is_authenticated %}
 					<li class="nav-item px-md-5">
-						<a  class="nav-link" href="{% url 'profile:profile_details' %}">Diet Plan</a>					
+						<a  class="nav-link" href="{% url 'profile:user_diet' %}">Diet Plan</a>					
 					</li>
 				{% endif %}
 			</ul>
