--- a/Templates/Account/user_diet.html
+++ b/Templates/Account/user_diet.html
@@ -1,7 +1,8 @@
 {% extends 'main.html' %}
 
 {% block content %}
-	
+
+	<br><br><br><br><br><br>
 	<table class="table table-striped table-dark">
 		<thead>
 			<tr>
@@ -15,44 +16,52 @@
 			</tr>
 		</thead>
 		<tbody>
-			{% for element in object_list %}	
-				{% if element.profile_user == request.user.profile %}			
-					{% for i in element.get_all_prods %}
+			{% for element in objects.diet_objects %}
 					<tr>
 						<td>
 							<button type="button" class="btn btn-secondary">
-								<a class="hyperlink-off" href="{% url 'delete_user_prod' i.pk %}">
+								<a class="hyperlink-off" href="#">
 									Remove
 								</a>
 							</button>
 						</td>	
-						<td>{{ i.prod|lower|capfirst }}</td>
-						<td>{{ i.prod_protein|floatformat:1 }}</td>
-						<td>{{ i.prod_carbohydrates|floatformat:1 }}</td>
-						<td>{{ i.prod_fat|floatformat:1 }}</td>		
-						<td>{{ i.prod_price }}</td>				
-						<td>{{ i.diet_quantity|floatformat:0 }}</td>
+						<td>{{ element.product|lower|capfirst }}</td>
+						<td>{{ element.position_protein|floatformat:1 }}</td>
+						<td>{{ element.position_carbohydrates|floatformat:1 }}</td>
+						<td>{{ element.position_fat|floatformat:1 }}</td>		
+						<td>{{ element.position_price|floatformat:2 }} $</td>				
+						<td>{{ element.weight|floatformat:0 }}</td>
 						<td>
 							<button type="button" class="btn btn-secondary">
-								<a class="hyperlink-off" href="{% url 'edit_user_prod' i.pk %}">
+								<a class="hyperlink-off" href="#">
 									Change quantity
 								</a>
 							</button>
 						</td>
-					</tr>
-					{% endfor %}
-					<tr>
-						<th scope="col">Summary:</th>
-						<th scope="col">{{ element.get_diet_callories }} / {{ element.profile_user.calories_limit }} kcal</th>
-						<th scope="col">{{ element.get_diet_proteins }}</th>
-						<th scope="col">{{ element.get_diet_carbohydrates }}</th>
-						<th scope="col">{{ element.get_diet_fat }}</th>
-						<th scope="col">{{ element.get_diet_price|floatformat:2 }}</th>
-						<th scope="col">Calories</th>
-						<td></td>
-					</tr>
-				{% endif %}
-			{% endfor %}			
+					</tr>	
+								
+			{% endfor %}
+			{% for element in objects.diet_plan %}
+				<tr>
+					<td></td>
+					<td> Summary: </td>					
+					<td>{{ element.protein_consumed|floatformat:0 }}</td>
+					<td>{{ element.carbohydrates_consumed|floatformat:0 }}</td>
+					<td>{{ element.fat_consumed|floatformat:0 }}</td>	
+					<td>{{ element.money_spent|floatformat:2 }} $</td>
+					<td>{{ element.weight_consumed|floatformat:0 }}</td>
+					{% if element.calories_consumed <= objects.profile.calories_plan %}
+						<td style="color:green" >
+							<b>{{ element.calories_consumed|floatformat:0 }} / {{ objects.profile.calories_plan }}<b>
+						</td>
+					{% else %}
+						<td style="color:red" >
+							<b>{{ element.calories_consumed|floatformat:0 }} / {{ objects.profile.calories_plan }}<b>
+						</td>
+					{% endif %}
+				</tr>	
+			{% endfor %}
+
 		</tbody>
 	</table>		
 {% endblock %}
