urls switched to base on slugs instead of pk in Food app

--- a/Templates/Food/ingredient_delete.html
+++ b/Templates/Food/ingredient_delete.html
@@ -15,7 +15,7 @@
                     Yes, I'm sure
                 </button>
                 <button class="btn btn-outline-info" type="submit">
-                    <a href="{% url 'food:ingredinet_detail' object.pk %}">
+                    <a href="{% url 'food:ingredinet_detail' object.slug %}">
                         No, take me back
                     </a>
                 </button>
