--- a/Templates/Food/ingredient_table.html
+++ b/Templates/Food/ingredient_table.html
@@ -53,7 +53,7 @@
 					</td>						
 					<td>									 
 						<button type="button" class="btn btn-secondary">
-							<a class="hyperlink-off" href="{% url 'food:create_recipe' prod_pk item.pk %}">Add</a>
+							<a class="hyperlink-off" href="{% url 'food:create_recipe' prod_slug item.slug %}">Add</a>
 						</button>													
 					</td>
 				</tr>
