--- a/Templates/Food/product_delete.html
+++ b/Templates/Food/product_delete.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <button class="btn btn-outline-danger" type="submit">Yes, I'm sure</button>
                 <button class="btn btn-outline-info" type="submit">
-                    <a href="{% url 'food:prod_detail' object.pk %}">
+                    <a href="{% url 'food:prod_detail' object.slug %}">
                         No, take me back
                     </a>
                 </button>
