--- a/Templates/Account/profile_list.html
+++ b/Templates/Account/profile_list.html
@@ -1,12 +1,12 @@
 {% extends 'main.html' %}
 
 {% block content %}	
-	<h1 id="title">Calories tables </h1>
+	<h1 id="title">Members list </h1>
 	<table class="table table-striped table-dark">
 
 		<thead>
 			<tr>
-				<th scope="col">Username</th>
+				<th scope="col">Username|capfirst</th>
 				<th scope="col">Calories target</th>
 				<th scope="col">Type of a diet</th>
 				<th scope="col">date joined</th>
