--- a/Templates/navigation_bar.html
+++ b/Templates/navigation_bar.html
@@ -22,7 +22,7 @@
 					<a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" 
 					id="submenu" aria-haspopup="true" href="#">Food</a>	
 
-					<div class="dropdown-menu" aria-labelledby="submenu">					
+					<div class="dropdown-menu food" aria-labelledby="submenu">					
 						<a class="dropdown-item" href="{% url 'food:prod_table' %}">Product table</a>						
 						{% if request.user.is_authenticated %}	
 							<a class="dropdown-item" href="{% url 'food:meal_create' %}">Create new meal</a>
