--- a/Templates/navigation_bar.html
+++ b/Templates/navigation_bar.html
@@ -20,7 +20,7 @@
 
 				<li class="nav-item dropdown px-md-5">
 					<a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" 
-					id="submenu" aria-haspopup="true" href="#">Food</a>	
+					id="submenu-food" aria-haspopup="true" href="#">Food</a>	
 
 					<div class="dropdown-menu food" aria-labelledby="submenu">					
 						<a class="dropdown-item" href="{% url 'food:prod_table' %}">Product table</a>						
@@ -37,9 +37,11 @@
 					<div class="dropdown-menu" aria-labelledby="submenu">	
 						<a class="dropdown-item" href="{% url 'food:ingredinet_table' %}">Ingredient table</a>
 						{% if request.user.is_authenticated %}	
-							<a class="dropdown-item" href="{%  url 'food:ingredinet_create' %}">Add new ingredient</a>
+							<a class="dropdown-item" href="{%  url 'food:ingredinet_create' %}" id="ingredient_creation">
+								Add new ingredient
+							</a>
 						{% endif %}
-						<a class="dropdown-item" href="#">Import ingredient</a>
+						<a class="dropdown-item" href="{% url 'food_api:api_ingredient_view' %}">Import ingredient</a>
 						
 					</div>				
 				</li>
@@ -69,8 +71,8 @@
 					<a class="nav-item nav-link" href="{% url 'profile:log_out' %}">Logout</a>
 					<a class="nav-item nav-link" href="{% url 'profile:profile_details' %}" > Profile </a>
 				{% else %}
-					<a class="nav-item nav-link" href="{% url 'profile:log_in' %}">Login</a>
-					<a class="nav-item nav-link" href="{% url 'profile:registration' %}">Register</a>
+					<a class="nav-item nav-link" href="{% url 'profile:log_in' %}" id="user_log_in">Login</a>
+					<a class="nav-item nav-link" href="{% url 'profile:registration' %}" id="user_registration">Register</a>
 				{% endif %}
 			</div>
 
